<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <Button
            android:id="@+id/button_first"
            android:layout_width="255dp"
            android:layout_height="53dp"
            android:text="@string/wykres"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutContainer" />


        <LinearLayout
            android:id="@+id/linearLayoutContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvShowTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/currency_exchange"
                android:textAlignment="center"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvFromCurrency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:baselineAligned="false"
                android:padding="5dp"
                android:text="@string/from_currency"
                android:textSize="20dp"
                android:textStyle="italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editFromCurrency"
                    android:layout_width="250dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:digits="0123456789."
                    android:ems="10"
                    android:hint="@string/enter_amount"
                    android:inputType="number"
                    android:textSize="20dp" />

                <Spinner
                    android:id="@+id/spinnerFromCurrency"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvToCurrency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:padding="5dp"
                android:text="@string/to_currency"
                android:textSize="20dp"
                android:textStyle="italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editToCurrency"
                    android:layout_width="250dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:digits="0123456789."
                    android:ems="10"
                    android:hint="@string/result"
                    android:inputType="number"
                    android:textSize="20dp" />

                <Spinner
                    android:id="@+id/spinnerToCurrency"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </LinearLayout>

            <Button
                android:id="@+id/buttonClear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/czyszczenie" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>

